--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>read one person</title>
+  <title>RESTful API</title>
 </head>
 <body>
   <p>Name of person is <%=name%></p>
